# tildagon-badge

./: .gitignore  ADOPT-TILDAGON-RS-BEST-PRACTICES.md  AGENTS.md  BLE-LED-CLIENT.md  BUTTONS.md  Cargo.toml  DISPLAY-REFRESH-TWEAKS.md  HARDWARE.md  LEDS-FLASH-STACK-ISSUE.md  PYTHON-PROGRAMMING.md  README.md  RUST-TILDAGON-CRATE-PLAN.md  WIFI-BLE-PLAN.md  flake.nix  notes.txt
embassy_blinky/: Cargo.toml
embassy_blinky/src/: main.rs
embassy_bluetooth_remote/: Cargo.toml
embassy_bluetooth_remote/src/: main.rs
embassy_hello_world/: Cargo.toml
embassy_hello_world/.cargo/: config.toml
embassy_hello_world/src/: main.rs
embassy_wifi_ble/: Cargo.toml
embassy_wifi_ble/src/: main.rs
itag_finder/: Cargo.toml
itag_finder/src/: ble.rs  buttons.rs  display.rs  events.rs  itag.rs  leds.rs  main.rs
itag_finder/src/itag/: connecting.rs  mod.rs  scanning.rs
nix/: devshell.nix  help.nix  safe-bwrap.nix  unsafe-bin.nix
pwa/: ble-led-demo.html  manifest.webmanifest  sw.js
tildagon/: Cargo.toml
tildagon/src/: battery.rs  buttons.rs  display.rs  error.rs  hardware.rs  leds.rs  lib.rs  radio.rs  resources.rs
tildagon/src/i2c/: mod.rs  tca9548a.rs
tildagon/src/pins/: assignment.rs  aw9523b.rs  input.rs  mod.rs  output.rs  pin.rs
