[workspace]
resolver = "3"
members = [
    "tildagon",
    "embassy_blinky",
    "embassy_wifi_ble",
    "embassy_bluetooth_remote",
    "embassy_hello_world"
]

[profile.release]
debug = true
debug-assertions = true
lto = "fat"
codegen-units = 1

[patch.crates-io]
esp-rom-sys = { git = "https://github.com/esp-rs/esp-hal.git", branch = "main" }
