[workspace]
resolver = "3"
members = [
    "tildagon",
    "embassy_blinky",
    "embassy_wifi_ble",
    "embassy_bluetooth_remote",
    "embassy_hello_world"
]

[profile.release]
debug = true
debug-assertions = true
lto = "fat"
codegen-units = 1

[patch.crates-io]
esp-hal = { path = "esp-hal/esp-hal" }
esp-rtos = { path = "esp-hal/esp-rtos" }
esp-radio = { path = "esp-hal/esp-radio" }
esp-backtrace = { path = "esp-hal/esp-backtrace" }
esp-println = { path = "esp-hal/esp-println" }
esp-alloc = { path = "esp-hal/esp-alloc" }
esp-config = { path = "esp-hal/esp-config" }
esp-phy = { path = "esp-hal/esp-phy" }
esp-metadata-generated = { path = "esp-hal/esp-metadata-generated" }
esp-sync = { path = "esp-hal/esp-sync" }
xtensa-lx-rt = { path = "esp-hal/xtensa-lx-rt" }
xtensa-lx = { path = "esp-hal/xtensa-lx" }
esp-hal-procmacros = { path = "esp-hal/esp-hal-procmacros" }
esp-bootloader-esp-idf = { path = "esp-hal/esp-bootloader-esp-idf" }
esp-rom-sys = { path = "esp-hal/esp-rom-sys" }
