[workspace]
resolver = "3"
members = [
    "tildagon",
    "embassy_blinky",
    "embassy_wifi_ble",
    "embassy_bluetooth_remote",
    "embassy_hello_world"
]

[profile.release]
debug = true
debug-assertions = true
lto = "fat"
codegen-units = 1

[patch.crates-io]
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
esp-radio = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
esp-config = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
esp-phy = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
esp-metadata-generated = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
esp-sync = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
xtensa-lx-rt = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
xtensa-lx = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
esp-hal-procmacros = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
esp-rom-sys = { git = "https://github.com/esp-rs/esp-hal.git", rev = "6c57123dce155d7935d011666b14b2390ef1d894" }
