[package]
name = "tildagon"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "tildagon"
path = "src/lib.rs"
harness = false
test = false
doctest = false

[dependencies]
embassy-executor = "0.9.1"
embassy-time = "0.5.1"
embassy-sync = "0.8.0"
esp-backtrace = { version = "0.18.1", features = ["panic-handler", "println"] }
esp-hal = { version = "1.0.0", features = ["log-04", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp-radio", "log-04"] }
esp-println = { version = "0.16.1", features = ["log-04"] }
log = "0.4"
esp-radio = { version = "0.17.0", features = ["esp32s3", "wifi", "ble", "coex", "log-04", "unstable"] }
embassy-net = { version = "0.9.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv4"] }
trouble-host = { version = "0.4.0", features = ["central", "scan", "gatt"] }
bt-hci = "0.6.0"
esp-alloc = { version = "0.9.0" }
smart-leds = "0.4.0"
esp-hal-smartled = "0.17.0"
static_cell = "2.1.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
mipidsi = "0.10.0"
embedded-graphics = "0.8.2"
embedded-hal-bus = "0.3.0"

[features]
default = ["esp32s3"]
esp32s3 = [
  "esp-backtrace/esp32s3",
  "esp-rtos/esp32s3",
  "esp-hal/esp32s3",
]
